# RagCLI

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/ragcli/: __init__.py  main.py
src/ragcli/lib/: agent.py  chunker.py  config.py  embedder.py  embeddings.py  log.py  reranker.py  store.py
