[project]
name = "ragcli"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Anchit Bajaj", email = "ab@abifog.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ragexperiments = "ragcli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
