[project]
name = "ragcli"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Anchit Bajaj", email = "ab@abifog.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.0.17",
    "typer>=0.19.2",
]

[project.scripts]
ragexperiments = "ragcli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pyright]
typeCheckingMode = "standard"
